<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_amount">Tip amount/person: %s</string>
    <string name="how_was_the_service">Tip (%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="number_of_people">Number of people</string>
</resources>